fixed @deprecated warnings under Java 11